--- a/model_hierarchy.qmd
+++ b/model_hierarchy.qmd
@@ -2,46 +2,39 @@
 title: "Hierarchical study"
 format: html
 ---
+
+This approach is comparable to a treatment study that compare outcomes before and after an intervention. In our case the treatment is the partnership. 
+
+For example, for Costco our dummy variable 'HasPartner' is True for AMERICAN EXPRESS until 2016 Q2, then False after the portfolio is transferred to CITIBANK. CITIBANK's 'HasPartner' is now True for Costco. 
+
+We can represent this as:
 $$
 Y_{it} = \alpha + \beta X_{it} + \gamma D_{it} + \mu_i + \epsilon_{it}
 $$
-In this representation:
 
-$Y_{it}$ is the dependent variable for entity $i$ at time $t$.
-$X_{it}$ represents the independent variable(s) for entity $i$ at time $t$.
-$D_{it}$ is the dummy variable for partner (1 has partner, 0 does not have partner).
-$\alpha$ is the constant term.
-$\beta$ is the coefficient for the independent variable(s).
-$\gamma$ is the coefficient for the dummy variable.
-$\mu_i$ represents the entity-specific fixed effect.
-$\epsilon_{it}$ is the error term.
+Where:
+$Y_{it}$ is the dependent variable for entity $i$ at time $t$.\
+$X_{it}$ represents the independent variable(s) for entity $i$ at time $t$.\
+$D_{it}$ is the dummy variable 'HasPartner' for partner (1 has partner, 0 does not have partner).\
+$\alpha$ is the constant term.\
+$\beta$ is the coefficient for the independent variable(s).\
+$\gamma$ is the coefficient for the dummy variable.\
+$\mu_i$ represents the entity-specific fixed effect.\
+$\epsilon_{it}$ is the error term.\
 
 The coefficient $\gamma$ on the dummy variable indicates the average change in the target variable associated with having a partner, controlling for other factors.
 
-```{mermaid}
-gantt
-    dateFormat YYYY-MM-DD
-    section GAP
-        SYNCHRONY : g1, 2013-09-30, 36m
-        another task    :after g1, 5m 
-    section Costco
-        CITIBANK          :c1, 2016-06-30, 29m
-        AMERICAN EXPRESS  :after c1, 26m
-
-```
+Various models are tested to identify which achieves the lowest AICc value. We can leverage what we have learnt so far; our starting point takes the model variables used by the best hierarchical event study.
 
 ```{r}
 #| warning: false
 #| echo: false
 source('functions.R')
 hier_data <- get_hierarchy_model_data()
-
-hier_data |> filter(Partner != "None")
-
-hier_data |> filter(Partner == "GAP", HasPartner == 1, 
-grepl("BARCLAYS",BankName)) |> nrow()
-
 ```
+
+### Model Choice
+
 ```{r}
 #| warning: false
 #| code-fold: false
@@ -74,28 +67,14 @@ model_compare |> as.data.frame() |> rownames_to_column(var = "Model")|>
                 rmarkdown::paged_table()  
 
 ```
+
+The best model based on AICc is model m1.
 ```{r}
 #| warning: false
 top_model <- lmer(formula(m1), data = hier_data, REML = TRUE)
 
 #summary(top_model)
 #coef(top_model)
-```
-
-```{r}
-#| warning: false
-generate_fixed_random_plts <- function(model) {
-    target_label <- credit_card.target_label()
-    feEx <- FEsim(model, 1000)
-    plotFE <- plotFEsim(feEx) +
-                        theme_bw() + labs(title = "Coefficient Plot",
-                        x = "Median Effect Estimate", y = glue("{target_label} (difference)"))
-
-    reEx <- REsim(model)
-    plotRE <- plotREsim(reEx)     
-
-    list(FE = plotFE, RE = plotRE) 
-}
 ```
 
 ### Fixed Effects
@@ -135,7 +114,9 @@ cov2cor(vcov(top_model)) |> as.matrix() |> as.data.frame() |>
 ```
 :::
 
-The high t-statistics for all the terms indicate that the effects are quite precise and the likelihood that this finding is due to chance is very small.
+If we look at the effect of 'HasPartner' this is 0.02 percentage points of our target measure. The std.error is half at	0.01. This suggests that the estimate is less precise, meaning there's more uncertainty about the true value of the coefficient.
+
+The high t-statistics for all the other terms, particularly UNRATE.log.diff, indicate that the effects are quite precise and the likelihood that this finding is due to chance is very small.
 
 ### Random Effects
 
@@ -178,95 +159,6 @@ ranef(top_model, condVar = FALSE)$`Partner:BankName` |> as.data.frame() |>
 
 From @fig-random-effect we can see that the random effect of Partnership is not distinguishable from zero i.e. the contribution to the variability of our target measure could be by chance alone. 
 
-## NAICS2
+### Conclusion
 
-Conceptually we would have been able to experiment with impact given 
-
-```{r}
-#| warning: false
-read_csv("data/Partner_NAICS.csv",show_col_types = FALSE) |> rmarkdown::paged_table()
-```
-
-```{r}
-#| warning: false
-m_naics <- lmer(UBPRE524.diff ~ NAICS2 + (1 + NAICS2 + Qtr+ UBPRB538.log.diff + UBPR3815.log.diff | BankName/Partner) + TDSP.log.diff + RRSFS.Pop.log.diff + UNRATE.log.diff + UNRATE.log.diff.lag1, data = hier_data, REML = TRUE)
-#summary(m_naics)
-#coef(m_naics)
-result_naics <- generate_fixed_random_plts(m_naics)
-
-```
-
-
-### Fixed Effects
-
-::: {#panel-random-effects .panel-tabset}
-
-### Plot
-```{r}
-#| warning: false
-#| label: fig-coef-hier-naics
-#| fig-cap: "Plot of simulated fixed effects"
-#| results: hide
-#| fig-keep: all
-
-result_naics$FE
-```
-
-### Coefficients and Correlation Data
-
-```{r}
-#| warning: false
-#| label: tbl-coef-hier-naics
-#| tbl-cap: "Coefficients and Correlation of Fixed Effects"
-#| tbl-subcap:
-#|  - "Coefficients"
-#|  - "Correlation of Fixed Effects"
-tidy(m_naics, effects = "fixed") |>
-    mutate(across(where(is.numeric), \(x) round(x,2))) |>  
-    dplyr::select(-effect) |>
-    rmarkdown::paged_table() 
-
-cov2cor(vcov(m_naics)) |> as.matrix() |> as.data.frame() |>
-    mutate(across(where(is.numeric), \(x) round(x,2))) |>  
-    rmarkdown::paged_table() 
-
-```
-:::
-
-### Random Effects
-
-::: {#sec-random-effects .panel-tabset}
-
-### Plot
-```{r}
-#| warning: false
-#| results: hide
-#| fig-keep: all
-#| label: fig-random-effect-naics
-#| fig-cap: "Random Effects"
-#| fig-height: 8
-result_naics$RE 
-```
-The red line indicates no effect (zero), and the dots represent the random effect estimates with their confidence intervals. Points that are distinguishable from zero (i.e. the confidence band does not cross the red line) are highlighted as black dots, whereas the grey dots are where the confidence band cross the red line.
-
-### Data
-```{r}
-#| warning: false
-#| label: tbl-coef-hier-naics-random
-#| tbl-cap: "Intercept and coefficients"
-#| tbl-subcap:
-#|  - "Random Effects for BankName"
-
-ranef(m_naics, condVar = FALSE)$BankName |> as.data.frame() |> 
-    rownames_to_column(var = "Entity") |> 
-    filter(!grepl("None", Entity)) |>
-    mutate(across(where(is.numeric), \(x) round(x,2))) |>  
-        rmarkdown::paged_table()
-
-ranef(m_naics, condVar = FALSE)$`Partner:BankName` |> as.data.frame() |> 
-    rownames_to_column(var = "Entity") |> 
-    filter(!grepl("None", Entity)) |>
-    mutate(across(where(is.numeric), \(x) round(x,2))) |>  
-        rmarkdown::paged_table()        
-```
-:::
+We did not find conclusive evidence that partnerships directly impact credit card delinquency. 
